--- a/HW3/templates/edit.html
+++ b/HW3/templates/edit.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="navbar navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('index') }}">Bitcoin Information Platform</a>
         </div>
     </nav>
 
     <div class="container mt-5">
-        <h1>Edit Log</h1>
+        <h1 class="text-light">Edit Log</h1>
         <form action="{{ url_for('edit', log_id=log._id) }}" method="POST">
             <div class="mb-3">
                 <label for="name" class="form-label">Log Name</label>
@@ -26,7 +26,7 @@
                 <label for="description" class="form-label">Log Description</label>
                 <textarea class="form-control" id="description" name="description" rows="3" required>{{ log.description }}</textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Update</button>
+            <button type="submit" class="btn btn-cyberpunk">Update</button>
             <a href="{{ url_for('index') }}" class="btn btn-secondary">Back</a>
         </form>
     </div>
