--- a/HW3/templates/index.html
+++ b/HW3/templates/index.html
@@ -13,6 +13,13 @@
         <div class="container">
             <a class="navbar-brand" href="#">Bitcoin Information Platform</a>
             <div>
+                {% if current_user.is_authenticated %}
+                    <span class="navbar-text me-3">Welcome, {{ current_user.username }}!</span>
+                    <a class="btn btn-secondary" href="{{ url_for('auth.logout') }}">Logout</a>
+                {% else %}
+                    <a class="btn btn-cyberpunk" href="{{ url_for('auth.login') }}">Login</a>
+                    <a class="btn btn-cyberpunk" href="{{ url_for('auth.register') }}">Register</a>
+                {% endif %}
                 <a class="btn btn-cyberpunk" href="{{ url_for('create') }}">Add Log</a>
                 <a class="btn btn-cyberpunk" href="{{ url_for('dca') }}">DCA Calculator</a>
             </div>
@@ -53,10 +60,12 @@
                 <h5>{{ log.name }}</h5>
                 <p>{{ log.description }}</p>
                 <a href="{{ url_for('detail', log_id=log._id) }}" class="btn btn-info btn-sm">Details</a>
-                <a href="{{ url_for('edit', log_id=log._id) }}" class="btn btn-warning btn-sm">Edit</a>
-                <form action="{{ url_for('delete', log_id=log._id) }}" method="POST" style="display: inline;">
-                    <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this log?');">Delete</button>
-                </form>
+                {% if current_user.is_authenticated and log.user_id == current_user.id %}
+                    <a href="{{ url_for('edit', log_id=log._id) }}" class="btn btn-warning btn-sm">Edit</a>
+                    <form action="{{ url_for('delete', log_id=log._id) }}" method="POST" style="display: inline;">
+                        <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this log?');">Delete</button>
+                    </form>
+                {% endif %}
             </div>
             {% endfor %}
         </div>
