--- a/HW3/templates/detail.html
+++ b/HW3/templates/detail.html
@@ -16,9 +16,13 @@
     </nav>
 
     <div class="container mt-5">
-        <h1 class="text-light">{{ log.name }}</h1>
-        <p>{{ log.description }}</p>
-        <a href="{{ url_for('index') }}" class="btn btn-secondary">Back</a>
+        <div class="card register-card p-4">
+            <h2 class="text-center text-light mb-4">{{ log.name }}</h2>
+            <p class="text-light">{{ log.description }}</p>
+            <div class="text-center mt-4">
+                <a href="{{ url_for('index') }}" class="btn btn-secondary">Back</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
