--- a/HW3/templates/edit.html
+++ b/HW3/templates/edit.html
@@ -18,7 +18,7 @@
     <div class="container mt-5">
         <div class="card register-card p-4">
             <h2 class="text-center text-light mb-4">Edit Log</h2>
-            <form action="{{ url_for('edit', log_id=log._id) }}" method="POST">
+            <form action="{{ url_for('edit', log_id=str(log._id)) }}" method="POST">
                 <div class="mb-3">
                     <label for="name" class="form-label text-light">Log Name</label>
                     <input type="text" class="form-control" id="name" name="name" value="{{ log.name }}" required>
