--- a/HW3/templates/index.html
+++ b/HW3/templates/index.html
@@ -71,10 +71,10 @@
             <div class="list-group-item">
                 <h5>{{ log.name }}</h5>
                 <p>{{ log.description }}</p>
-                <a href="{{ url_for('detail', log_id=log._id) }}" class="btn btn-info btn-sm">Details</a>
-                {% if current_user.is_authenticated and (log.user_id == current_user.id or current_user.is_admin) %}
-                    <a href="{{ url_for('edit', log_id=log._id) }}" class="btn btn-warning btn-sm">Edit</a>
-                    <form action="{{ url_for('delete', log_id=log._id) }}" method="POST" style="display: inline;">
+                <a href="{{ url_for('detail', log_id=str(log._id)) }}" class="btn btn-info btn-sm">Details</a>
+                {% if current_user.is_authenticated and (str(log.user_id) == current_user.id or current_user.is_admin) %}
+                    <a href="{{ url_for('edit', log_id=str(log._id)) }}" class="btn btn-warning btn-sm">Edit</a>
+                    <form action="{{ url_for('delete', log_id=str(log._id)) }}" method="POST" style="display: inline;">
                         <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this log?');">Delete</button>
                     </form>
                 {% endif %}
