--- a/HW3/templates/dca_result.html
+++ b/HW3/templates/dca_result.html
@@ -25,7 +25,7 @@
         
         <!-- Investment Results -->
         <div class="row justify-content-center mt-4">
-            <div class="col-lg-8 col-md-10 col-sm-12 result-container text-center">
+            <div class="col-lg-8 col-md-10 col-sm-12 result-container text-center active">
                 <h2 class="text-info">Investment Results</h2>
                 <div class="result-item">Total Invested: <span class="text-warning">${{ total_invested }}</span></div>
                 <div class="result-item">Total Value Now: <span class="text-success">${{ total_value }}</span></div>
