--- a/HW3/templates/login.html
+++ b/HW3/templates/login.html
@@ -22,7 +22,7 @@
 
         <div class="row justify-content-center">
             <div class="col-md-6 col-lg-5">
-                <div class="card p-4 login-card">
+                <div class="card p-4 login-card active">
                     <h2 class="text-center mb-4">Login</h2>
                     <form action="{{ url_for('login') }}" method="POST">
                         {{ form.hidden_tag() }} <!-- CSRF token -->
