--- a/HW3/templates/create.html
+++ b/HW3/templates/create.html
@@ -16,7 +16,7 @@
     </nav>
 
     <div class="container mt-5">
-        <div class="card register-card p-4">
+        <div class="card register-card p-4 active">
             <h2 class="text-center text-light mb-4">Create Log</h2>
             <form action="{{ url_for('create') }}" method="POST">
                 <div class="mb-3">
