--- a/HW3/templates/detail.html
+++ b/HW3/templates/detail.html
@@ -16,7 +16,7 @@
     </nav>
 
     <div class="container mt-5">
-        <div class="card register-card p-4">
+        <div class="card register-card p-4 active">
             <h2 class="text-center text-light mb-4">{{ log.name }}</h2>
             <p class="text-light">{{ log.description }}</p>
             <div class="text-center mt-4">
