--- a/HW3/templates/dca.html
+++ b/HW3/templates/dca.html
@@ -87,5 +87,15 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <!-- Initialize Flatpickr -->
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script>
+        flatpickr("#date-range", {
+            mode: "range",
+            dateFormat: "Y-m-d",
+            maxDate: "today",
+            locale: {
+                rangeSeparator: " to "
+            }
+        });
+    </script>
 </body>
 </html>
